fixes issue with responsive dashboard tabs on mobile

--- a/app/styles/components/dashboard.less
+++ b/app/styles/components/dashboard.less
@@ -1,11 +1,9 @@
-
 .Dashboard-avatar {
   padding-top: 20px;
   width: 100px;
   max-width: 100%;
   .Avatar {
     text-align: center;
-
   }
   .Avatar-image {
     border-radius: 50%;
@@ -14,6 +12,14 @@
   @media(min-width: @screen-md-min) {
     padding-top: 0px;
   }
+}
+
+.Dashboard .InlineEdit-input {
+  font-size: 1.2rem;
+  color: @text-color;
+  text-decoration: underline;
+  max-width: 100%;
+  background: transparent;
 }
 
 .Dashboard .InlineEdit-icon {
